# rp2040-base-project

./: .gitignore  CMakeLists.txt  README.md
include/: config.h
src/: main.c
